Use LLVM_NATIVE cross-compile

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,7 @@ source:
     patches:
       # https://reviews.llvm.org/D85464
       - out-of-tree.diff
+      - mlir-cross.patch
 
 build:
   number: 0
