--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -10,5 +10,10 @@ cxx_compiler_version:
 - '12'
 macos_machine:
 - arm64-apple-darwin20.0.0
+pin_run_as_build:
+  zlib:
+    max_pin: x.x
 target_platform:
 - osx-arm64
+zlib:
+- '1.2'
