--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,9 @@ source:
 
 build:
   number: 0
+  ignore_run_exports_from:
+    # CMake looks for zlib but mlir doesn't link against it
+    - zlib
 
 requirements:
   build:
@@ -24,6 +27,7 @@ requirements:
   host:
     - llvmdev {{ version }}
     - llvm {{ version }}
+    - zlib  # linux
 
 outputs:
   - name: mlir
