--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -1,9 +1,9 @@
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge/label/llvm_rc,conda-forge
+- conda-forge/label/llvm_dev,conda-forge
 channel_targets:
-- conda-forge mlir_rc
+- conda-forge mlir_dev
 cxx_compiler:
 - gxx
 cxx_compiler_version:
