--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,9 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 channel_sources:
-- conda-forge/label/llvm_rc,conda-forge
+- conda-forge/label/llvm_dev,conda-forge
 channel_targets:
-- conda-forge mlir_rc
+- conda-forge mlir_dev
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
