--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,7 +1,7 @@
 channel_sources:
-- conda-forge/label/llvm_dev,conda-forge
+- conda-forge/label/llvm_tf,conda-forge
 channel_targets:
-- conda-forge mlir_dev
+- conda-forge mlir_tf
 cxx_compiler:
 - vs2019
 pin_run_as_build:
