--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -7,6 +7,6 @@ c_compiler:            # [osx and arm64]
 cxx_compiler:          # [osx and arm64]
   - clang_bootstrap    # [osx and arm64]
 channel_targets:
-  - conda-forge mlir_dev
+  - conda-forge mlir_tf
 channel_sources:
-  - conda-forge/label/llvm_dev,conda-forge
+  - conda-forge/label/llvm_tf,conda-forge
