--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "14.0.0.dev55c71c9eac9b" %}
+{% set version = "14.0.0.tf280_55c71c9eac9b" %}
 {% set major_ver = version.split(".")[0] %}
 {% set git_commit = "55c71c9eac9bc7f956a05fa9258fad4f86565450" %}
 {% if git_commit != "" %}
