--- a/.ci_support/win_64_python3.10.____cpython.yaml
+++ b/.ci_support/win_64_python3.10.____cpython.yaml
@@ -4,6 +4,12 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2019
+pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- 3.10.* *_cpython
 target_platform:
 - win-64
 zlib:
