--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,13 +21,17 @@ requirements:
     - ninja
     - {{ compiler('cxx') }}
     - llvmdev {{ version }}  # [build_platform != target_platform]
+    - python                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
+    - numpy                  # [build_platform != target_platform]
+    - pybind11               # [build_platform != target_platform]
   host:
-    - python
-    - numpy >=1.23
-    - pybind11 >=2.8.0
     - llvmdev {{ version }}
     - llvm {{ version }}
     - zlib
+    - python
+    - numpy >=1.23
+    - pybind11 >=2.8.0
 
 outputs:
   - name: mlir
