--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - {{ compiler('cxx') }}
     - llvmdev {{ version }}  # [build_platform != target_platform]
     - python                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
+    # - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - numpy                  # [build_platform != target_platform]
     - pybind11               # [build_platform != target_platform]
   host:
