--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,6 @@ requirements:
     - {{ compiler('cxx') }}
     - llvmdev {{ version }}  # [build_platform != target_platform]
     - python                 # [build_platform != target_platform]
-    # - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - numpy                  # [build_platform != target_platform]
     - pybind11               # [build_platform != target_platform]
   host:
@@ -43,6 +42,9 @@ outputs:
         - cmake
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
+        - python                   # [build_platform != target_platform]
+        - numpy                    # [build_platform != target_platform]
+        - pybind11                 # [build_platform != target_platform]
       host:
         - python
         - numpy >=1.23
@@ -77,6 +79,9 @@ outputs:
         - cmake
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
+        - python                   # [build_platform != target_platform]
+        - numpy                    # [build_platform != target_platform]
+        - pybind11                 # [build_platform != target_platform]
       host:
         - python
         - numpy >=1.23
@@ -110,6 +115,9 @@ outputs:
         - cmake
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
+        - python                   # [build_platform != target_platform]
+        - numpy                    # [build_platform != target_platform]
+        - pybind11                 # [build_platform != target_platform]
       host:
         - python
         - numpy >=1.23
