--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - {{ compiler('cxx') }}
     - llvmdev {{ version }}  # [build_platform != target_platform]
     - python                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - numpy >=1.23           # [build_platform != target_platform]
     - pybind11 >=2.8.0       # [build_platform != target_platform]
   host:
@@ -43,6 +44,7 @@ outputs:
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
         - python                   # [build_platform != target_platform]
+        - cross-python_{{ target_platform }}     # [build_platform != target_platform]
         - numpy >=1.23             # [build_platform != target_platform]
         - pybind11 >=2.8.0         # [build_platform != target_platform]
       host:
@@ -80,6 +82,7 @@ outputs:
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
         - python                   # [build_platform != target_platform]
+        - cross-python_{{ target_platform }}     # [build_platform != target_platform]
         - numpy >=1.23             # [build_platform != target_platform]
         - pybind11 >=2.8.0         # [build_platform != target_platform]
       host:
@@ -116,6 +119,7 @@ outputs:
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
         - python                   # [build_platform != target_platform]
+        - cross-python_{{ target_platform }}     # [build_platform != target_platform]
         - numpy >=1.23             # [build_platform != target_platform]
         - pybind11 >=2.8.0         # [build_platform != target_platform]
       host:
