Remove osx-arm64 from building python bindings
I don't like this solution, but it is better to get something
working and kick this problem down the road. Mac M1 machines
can always build an x86-64 environment, so this is more of an
inconvenience than a show-stopper for any user.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,16 +21,20 @@ requirements:
     - ninja
     - {{ compiler('cxx') }}
     - llvmdev {{ version }}  # [build_platform != target_platform]
+    {% if not arm64 %}
     - python                 # [build_platform != target_platform]
     - numpy >=1.23           # [build_platform != target_platform]
     - pybind11 >=2.8.0       # [build_platform != target_platform]
+    {% endif %}
   host:
     - llvmdev {{ version }}
     - llvm {{ version }}
     - zlib
+    {% if not arm64 %}
     - python
     - numpy >=1.23
     - pybind11 >=2.8.0
+    {% endif %}
 
 outputs:
   - name: mlir
@@ -42,13 +46,17 @@ outputs:
         - cmake
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
+        {% if not arm64 %}
         - python                   # [build_platform != target_platform]
         - numpy >=1.23             # [build_platform != target_platform]
         - pybind11 >=2.8.0         # [build_platform != target_platform]
+        {% endif %}
       host:
+        {% if not arm64 %}
         - python
         - numpy >=1.23
         - pybind11 >=2.8.0
+        {% endif %}
         - {{ pin_subpackage("libmlir", exact=True) }}
         - llvmdev {{ version }}
         - llvm {{ version }}
@@ -79,13 +87,17 @@ outputs:
         - cmake
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
+        {% if not arm64 %}
         - python                   # [build_platform != target_platform]
         - numpy >=1.23             # [build_platform != target_platform]
         - pybind11 >=2.8.0         # [build_platform != target_platform]
+        {% endif %}
       host:
+        {% if not arm64 %}
         - python
         - numpy >=1.23
         - pybind11 >=2.8.0
+        {% endif %}
         - llvmdev {{ version }}
         - llvm {{ version }}
         - zlib
@@ -115,13 +127,17 @@ outputs:
         - cmake
         - ninja
         - llvmdev {{ version }}    # [build_platform != target_platform]
+        {% if not arm64 %}
         - python                   # [build_platform != target_platform]
         - numpy >=1.23             # [build_platform != target_platform]
         - pybind11 >=2.8.0         # [build_platform != target_platform]
+        {% endif %}
       host:
+        {% if not arm64 %}
         - python
         - numpy >=1.23
         - pybind11 >=2.8.0
+        {% endif %}
         - llvmdev {{ version }}
         - llvm {{ version }}
         - zlib
@@ -136,6 +152,7 @@ outputs:
     script: install_libmlir.sh  # [unix]
     script: install_mlir.bat    # [win]
     build:
+      skip : true  # [osx and arm64]
       {% if not win %}
       run_exports:  # [unix]
         - {{ pin_subpackage("libmlir", exact=True) }}  # [unix]
