--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -1,22 +1,24 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '14'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+- '11'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
+- 3.10.* *_cpython
 - 3.8.* *_cpython
+- 3.9.* *_cpython
 target_platform:
-- osx-64
+- linux-ppc64le
 zlib:
 - '1.2'
