--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -14,6 +14,10 @@ cxx_compiler_version:
 - '11'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
+numpy:
+- '1.21'
+- '1.20'
+- '1.20'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -24,5 +28,8 @@ python:
 - 3.9.* *_cpython
 target_platform:
 - linux-aarch64
+zip_keys:
+- - python
+  - numpy
 zlib:
 - '1.2'
