--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -10,6 +10,10 @@ cxx_compiler_version:
 - '14'
 macos_machine:
 - x86_64-apple-darwin13.4.0
+numpy:
+- '1.21'
+- '1.20'
+- '1.20'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -20,5 +24,8 @@ python:
 - 3.9.* *_cpython
 target_platform:
 - osx-64
+zip_keys:
+- - python
+  - numpy
 zlib:
 - '1.2'
