--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -10,7 +10,22 @@ cxx_compiler_version:
 - '14'
 macos_machine:
 - arm64-apple-darwin20.0.0
+numpy:
+- '1.21'
+- '1.20'
+- '1.20'
+pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- 3.10.* *_cpython
+- 3.8.* *_cpython
+- 3.9.* *_cpython
 target_platform:
 - osx-arm64
+zip_keys:
+- - python
+  - numpy
 zlib:
 - '1.2'
