--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -4,6 +4,10 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2019
+numpy:
+- '1.21'
+- '1.20'
+- '1.20'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -14,5 +18,8 @@ python:
 - 3.9.* *_cpython
 target_platform:
 - win-64
+zip_keys:
+- - python
+  - numpy
 zlib:
 - '1.2'
