--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -118,10 +118,11 @@ outputs:
         - {{ compiler('cxx') }}
         - cmake
         - ninja
-        - llvmdev {{ version }}    # [build_platform != target_platform]
-        - python                   # [build_platform != target_platform]
-        - numpy                    # [build_platform != target_platform]
-        - pybind11 >=2.8.0         # [build_platform != target_platform]
+        - llvmdev {{ version }}                # [build_platform != target_platform]
+        - cross-python_{{ target_platform }}   # [build_platform != target_platform]
+        - python                               # [build_platform != target_platform]
+        - numpy                                # [build_platform != target_platform]
+        - pybind11 >=2.8.0                     # [build_platform != target_platform]
       host:
         - python
         - numpy
