MNT: Re-rendered with conda-build 3.23.3, conda-smithy 3.23.0, and conda-forge-pinning 2023.03.03.18.50.53

--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -3,7 +3,7 @@ MACOSX_DEPLOYMENT_TARGET:
 channel_sources:
 - conda-forge/label/llvm_rc,conda-forge
 channel_targets:
-- conda-forge mlir_rc
+- conda-forge llvm_rc
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
