--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,8 @@
 build_platform: {osx_arm64: osx_64, linux_ppc64le: linux_64, linux_aarch64: linux_64}
 conda_forge_output_validation: true
+# label/llvm_rc would overrule our default compiler stack on osx due to
+# strict channel priority; disable for rc-phase; don't commit to main!
+channel_priority: flexible
 test_on_native_only: true
 github:
   branch_name: main
