--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,8 @@
 {% set version = "17.0.0.dev0" %}
 {% set major_version = version.split(".")[0] %}
 
+{% set git = "git" if version.split(".")[-1] == "dev0" else "" %}
+
 package:
   name: mlir-split
   version: {{ version }}
@@ -81,12 +83,12 @@ outputs:
     test:
       commands:
         # presence of versioned libraries
-        - test -f $PREFIX/lib/libMLIR.so.{{ major_version }}                       # [linux]
-        - test -f $PREFIX/lib/libmlir_runner_utils.so.{{ major_version }}          # [linux]
-        - test -f $PREFIX/lib/libmlir_c_runner_utils.so.{{ major_version }}        # [linux]
-        - test -f $PREFIX/lib/libMLIR.{{ major_version }}.dylib                    # [osx]
-        - test -f $PREFIX/lib/libmlir_runner_utils.{{ major_version }}.dylib       # [osx]
-        - test -f $PREFIX/lib/libmlir_c_runner_utils.{{ major_version }}.dylib     # [osx]
+        - test -f $PREFIX/lib/libMLIR.so.{{ major_version }}{{ git }}                       # [linux]
+        - test -f $PREFIX/lib/libmlir_runner_utils.so.{{ major_version }}{{ git }}          # [linux]
+        - test -f $PREFIX/lib/libmlir_c_runner_utils.so.{{ major_version }}{{ git }}        # [linux]
+        - test -f $PREFIX/lib/libMLIR.{{ major_version }}{{ git }}.dylib                    # [osx]
+        - test -f $PREFIX/lib/libmlir_runner_utils.{{ major_version }}{{ git }}.dylib       # [osx]
+        - test -f $PREFIX/lib/libmlir_c_runner_utils.{{ major_version }}{{ git }}.dylib     # [osx]
 
         # absence of unversioned libraries
         - test ! -f $PREFIX/lib/libMLIR$SHLIB_EXT                   # [unix]
