--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "17.0.0.dev0" %}
+{% set version = "17.0.0.rc1" %}
 {% set major_version = version.split(".")[0] %}
 
 {% set git = "git" if version.split(".")[-1] == "dev0" else "" %}
@@ -8,10 +8,8 @@ package:
   version: {{ version }}
 
 source:
-  - git_url: https://github.com/llvm/llvm-project.git
-    git_rev: a4f4d82c35b80b681687b545200456e79a82d9c2
-  # - url: https://github.com/llvm/llvm-project/releases/download/llvmorg-{{ version.replace(".rc", "-rc") }}/llvm-project-{{ version.replace(".rc", "rc") }}.src.tar.xz
-  #   sha256: ce5e71081d17ce9e86d7cbcfa28c4b04b9300f8fb7e78422b1feb6bc52c3028e
+  - url: https://github.com/llvm/llvm-project/releases/download/llvmorg-{{ version.replace(".rc", "-rc") }}/llvm-project-{{ version.replace(".rc", "rc") }}.src.tar.xz
+    sha256: 01b80625c131b8281dcf76a4e6395d10f45835c60e27357c92abf5a98c9a0337
     patches:
       # https://reviews.llvm.org/D99470
       - patches/0001-Support-cross-compiling-standalone-MLIR.patch
