--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,7 +1,7 @@
-c_compiler:         # [osx and arm64]
-  - clang_bootstrap # [osx and arm64]
-cxx_compiler:       # [osx and arm64]
-  - clang_bootstrap # [osx and arm64]
+c_compiler:             # [osx]
+  - clang_bootstrap     # [osx]
+cxx_compiler:           # [osx]
+  - clang_bootstrap     # [osx]
 
 channel_targets:
   - conda-forge llvm_rc
