--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ source:
       - patches/0001-Support-cross-compiling-standalone-MLIR.patch
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -48,10 +48,13 @@ outputs:
         - {{ pin_subpackage("libmlir", exact=True) }}
         - llvmdev {{ version }}
         - llvm {{ version }}
-        - zlib
+        - zlib  # [win]
+        - zstd  # [win]
       run:
-        - {{ pin_subpackage("libmlir", exact=True) }}
         - llvmdev {{ version }}
+        - {{ pin_subpackage("libmlir" ~ major_version, exact=True) }}   # [unix]
+        # we need to do this manually because clang_bootstrap has no run-export
+        - libcxx >={{ cxx_compiler_version }}                           # [osx]
     test:
       commands:
         # static library
@@ -84,7 +87,9 @@ outputs:
       host:
         - llvmdev {{ version }}
         - llvm {{ version }}
-        - zlib
+      run:
+        # we need to do this manually because clang_bootstrap has no run-export
+        - libcxx >={{ cxx_compiler_version }}   # [osx]
     test:
       commands:
         # presence of versioned libraries
@@ -118,14 +123,16 @@ outputs:
       host:
         - llvmdev {{ version }}
         - llvm {{ version }}
-        - zlib
         - {{ pin_subpackage("libmlir" ~ major_version, exact=True) }}  # [unix]
       run:
         - {{ pin_subpackage("libmlir" ~ major_version, exact=True) }}  # [unix]
+        # we need to do this manually because clang_bootstrap has no run-export
+        - libcxx >={{ cxx_compiler_version }}                          # [osx]
     test:
       commands:
         # presence of unversioned libraries
         - test -f $PREFIX/lib/libMLIR${SHLIB_EXT}       # [unix]
+        # nothing on windows (package currently empty)
         - if exist %LIBRARY_BIN%\libmlir.dll exit 1     # [win]
 
 about:
