--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -11,7 +11,7 @@ channel_sources:
 channel_targets:
 - conda-forge llvm_rc
 cxx_compiler:
-- clangxx
+- clang_bootstrap
 cxx_compiler_version:
 - '16'
 macos_machine:
