re-add zlib as a host-dep for mlir on unix

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,7 +48,7 @@ outputs:
         - {{ pin_subpackage("libmlir", exact=True) }}
         - llvmdev {{ version }}
         - llvm {{ version }}
-        - zlib  # [win]
+        - zlib
         - zstd  # [win]
       run:
         - llvmdev {{ version }}
