--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,8 @@ requirements:
     - zlib                   # [build_platform != target_platform]
   host:
     - llvmdev {{ version }}
+    # while we fix CMake metadata for llvmdev
+    - libllvm-c{{ major_version }}              # [win]
     - llvm {{ version }}
     - zlib
 
