--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -46,10 +46,17 @@ jobs:
          df -h
     displayName: Manage disk space
   - script: |
-         sudo fallocate -l 15GiB /swapfile || true
-         sudo chmod 600 /swapfile || true
-         sudo mkswap /swapfile || true
-         sudo swapon /swapfile || true
+        SWAPFILE=/swapfile
+        # If there is already a swapfile, disable it and remove it
+        if swapon --show | grep -q $SWAPFILE; then
+            echo "Disabling existing swapfile..."
+            swapoff $SWAPFILE || true
+        fi
+        [ -f "$SWAPFILE" ] && rm -f $SWAPFILE
+         sudo fallocate -l 15GiB $SWAPFILE
+         sudo chmod 600 $SWAPFILE
+         sudo mkswap $SWAPFILE
+         sudo swapon $SWAPFILE
     displayName: Create swap file
   # configure qemu binfmt-misc running.  This allows us to run docker containers
   # embedded qemu-static
